--- a/Bayesian_Personalized_Ranking.ipynb
+++ b/Bayesian_Personalized_Ranking.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -20,19 +20,19 @@
       "Requirement already satisfied: pandas in /usr/local/lib/python3.6/dist-packages (1.0.3)\n",
       "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (2.23.0)\n",
       "Requirement already satisfied: sklearn in /usr/local/lib/python3.6/dist-packages (0.0)\n",
-      "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from cornac) (1.4.1)\n",
       "Requirement already satisfied: tqdm>=4.19 in /usr/local/lib/python3.6/dist-packages (from cornac) (4.43.0)\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from cornac) (1.18.1)\n",
+      "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from cornac) (1.17.2)\n",
+      "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from cornac) (1.4.1)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas) (2019.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas) (2.8.1)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /usr/lib/python3/dist-packages (from requests) (2.6)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests) (1.25.8)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas) (2.8.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests) (2019.11.28)\n",
       "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests) (3.0.4)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests) (1.25.8)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /usr/lib/python3/dist-packages (from requests) (2.6)\n",
       "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from sklearn) (0.22.2.post1)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.6.1->pandas) (1.11.0)\n",
       "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->sklearn) (0.14.1)\n",
-      "\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.0.2 is available.\n",
+      "\u001b[33mWARNING: You are using pip version 19.2.3, however version 20.0.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from reco_utils.dataset import movielens\n",
     "from reco_utils.dataset.python_splitters import python_random_split\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +77,10 @@
     "                                     lambda_reg=0.001,\n",
     "                                     verbose=True,\n",
     "                                     seed=SEED)\n",
+    "        self.all_predictions=None\n",
     "\n",
     "    def fit(self, train):\n",
+    "        self.all_predictions=None\n",
     "        train_set = cornac.data.Dataset.from_uir(train.itertuples(index=False), seed=SEED)\n",
     "        print('Number of users: {}'.format(train_set.num_users))\n",
     "        print('Number of items: {}'.format(train_set.num_items))\n",
@@ -86,33 +89,68 @@
     "            self.bpr.fit(train_set)\n",
     "        print(\"Took {} seconds for training.\".format(t))\n",
     "\n",
+    "    def get_pred(self,row):\n",
+    "        list_pred=self.all_predictions [(self.all_predictions.userID==row[0]) & (self.all_predictions.itemID==row[1])][\"prediction\"].tolist()\n",
+    "        return list_pred[0] if list_pred else 0 #maybe -10 ??\n",
+    "        \n",
     "    def predict(self, feed_dict):\n",
-    "        user = feed_dict[\"user_id\"][0]\n",
+    "        #print('users', feed_dict[\"user_id\"])\n",
+    "        #print('items', feed_dict[\"item_id\"])\n",
+    "        users = feed_dict[\"user_id\"]\n",
+    "        user = users[0]\n",
     "        items = feed_dict[\"item_id\"]\n",
-    "        with Timer() as t:\n",
-    "            all_predictions = predict_ranking(self.bpr, None, usercol='userID', itemcol='itemID', remove_seen=False)\n",
-    "        print(\"Took {} seconds for prediction.\".format(t))\n",
-    "        return all_predictions [all_predictions.userID==user & all_predictions.itemID.isin(items)]"
+    "        if self.all_predictions is None:\n",
+    "            with Timer() as t:\n",
+    "                self.all_predictions = predict_ranking(self.bpr, None, usercol='userID', itemcol='itemID', remove_seen=False)\n",
+    "            print(\"Took {} seconds for prediction.\".format(t))\n",
+    "        df = pd.DataFrame(np.transpose(np.vstack((users,items))))\n",
+    "        df['prediction'] = df.apply (lambda row: self.get_pred(row), axis=1)\n",
+    "        return df['prediction'].tolist()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example of use"
+    "## Leave one out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_test(model, file_name):\n",
+    "    COLS = ['userID', 'itemID', 'rating', 'timestamp']\n",
+    "    train_data = pd.read_csv(\"Data/movielens.train_explicit_ds\",sep='\\t', names=COLS)\n",
+    "\n",
+    "    model.fit(train_data)\n",
+    "\n",
+    "    test_items = np.load('Data/test_items.npy', allow_pickle=True)\n",
+    "    test_users = np.load('Data/test_users.npy', allow_pickle=True)\n",
+    "    predictions = []\n",
+    "    for users, items in tqdm(zip(test_users, test_items)):\n",
+    "        feed_dict={'user_id': users, 'item_id': items}\n",
+    "        p = model.predict(feed_dict)\n",
+    "        #print(len(items),len(p))\n",
+    "        predictions.append(p)\n",
+    "    \n",
+    "    np.save('Predictions/'+file_name, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4.81k/4.81k [00:02<00:00, 1.76kKB/s]\n",
-      "  3%|▎         | 3/100 [00:00<00:04, 21.57it/s, correct=83.84%, skipped=9.20%]"
+      "  2%|▏         | 2/100 [00:00<00:05, 17.56it/s, correct=85.39%, skipped=12.05%]"
      ]
     },
     {
@@ -120,14 +158,15 @@
      "output_type": "stream",
      "text": [
       "Number of users: 943\n",
-      "Number of items: 1642\n"
+      "Number of items: 1680\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 21.35it/s, correct=92.09%, skipped=9.09%]\n"
+      "100%|██████████| 100/100 [00:05<00:00, 16.81it/s, correct=94.07%, skipped=12.14%]\n",
+      "0it [00:00, ?it/s]"
      ]
     },
     {
@@ -135,164 +174,52 @@
      "output_type": "stream",
      "text": [
       "Optimization finished!\n",
-      "Took 4.6931 seconds for training.\n",
-      "Took 1.1474 seconds for prediction.\n"
+      "Took 5.9600 seconds for training.\n",
+      "Took 1.2552 seconds for prediction.\n"
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "943it [04:10,  3.76it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_test(BPR(), 'bpr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>userID</th>\n",
-       "      <th>itemID</th>\n",
-       "      <th>prediction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>765172</th>\n",
-       "      <td>1</td>\n",
-       "      <td>901</td>\n",
-       "      <td>-2.011520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765173</th>\n",
-       "      <td>1</td>\n",
-       "      <td>755</td>\n",
-       "      <td>0.335445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765174</th>\n",
-       "      <td>1</td>\n",
-       "      <td>287</td>\n",
-       "      <td>0.511043</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765175</th>\n",
-       "      <td>1</td>\n",
-       "      <td>181</td>\n",
-       "      <td>4.115204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765176</th>\n",
-       "      <td>1</td>\n",
-       "      <td>96</td>\n",
-       "      <td>3.755646</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765177</th>\n",
-       "      <td>1</td>\n",
-       "      <td>83</td>\n",
-       "      <td>2.446390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765178</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.917794</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765179</th>\n",
-       "      <td>1</td>\n",
-       "      <td>225</td>\n",
-       "      <td>1.146336</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765180</th>\n",
-       "      <td>1</td>\n",
-       "      <td>199</td>\n",
-       "      <td>1.685099</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765181</th>\n",
-       "      <td>1</td>\n",
-       "      <td>24</td>\n",
-       "      <td>3.081897</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765182</th>\n",
-       "      <td>1</td>\n",
-       "      <td>632</td>\n",
-       "      <td>0.624080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765183</th>\n",
-       "      <td>1</td>\n",
-       "      <td>321</td>\n",
-       "      <td>0.904416</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765184</th>\n",
-       "      <td>1</td>\n",
-       "      <td>272</td>\n",
-       "      <td>1.305338</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765185</th>\n",
-       "      <td>1</td>\n",
-       "      <td>544</td>\n",
-       "      <td>1.517288</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        userID  itemID  prediction\n",
-       "765172       1     901   -2.011520\n",
-       "765173       1     755    0.335445\n",
-       "765174       1     287    0.511043\n",
-       "765175       1     181    4.115204\n",
-       "765176       1      96    3.755646\n",
-       "765177       1      83    2.446390\n",
-       "765178       1       1    3.917794\n",
-       "765179       1     225    1.146336\n",
-       "765180       1     199    1.685099\n",
-       "765181       1      24    3.081897\n",
-       "765182       1     632    0.624080\n",
-       "765183       1     321    0.904416\n",
-       "765184       1     272    1.305338\n",
-       "765185       1     544    1.517288"
+       "array([[-0.84978002, -0.57607543, -0.14493404, ..., -0.08240199,\n",
+       "         2.49868298, -0.92150867],\n",
+       "       [-1.4156729 , -1.05214524, -3.02378964, ...,  2.19568563,\n",
+       "        -0.5386427 ,  2.92233276],\n",
+       "       [-2.21766901, -3.32058573, -1.09007227, ..., -2.77728033,\n",
+       "        -3.12943149,  3.42444611],\n",
+       "       ...,\n",
+       "       [-2.08446383,  1.6115917 ,  0.34003991, ...,  1.31036294,\n",
+       "         0.7359587 ,  3.52911282],\n",
+       "       [-1.66564274, -0.5490877 , -2.31219816, ..., -2.00165796,\n",
+       "        -1.9971993 ,  1.52274096],\n",
+       "       [-1.49695039, -3.22197604, -0.52941251, ...,  0.54471171,\n",
+       "         2.39169216,  5.49815607]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = movielens.load_pandas_df(\n",
-    "    size=\"100k\", #100k, 1m, 10m, or 20m\n",
-    "    header=[\"userID\", \"itemID\", \"rating\"]\n",
-    ")\n",
-    "\n",
-    "train, test = python_random_split(data, 0.75)\n",
-    "\n",
-    "feed_dict = {\n",
-    "        'user_id': np.full(10, 153),\n",
-    "        'item_id': train[\"itemID\"][:15].to_numpy(),\n",
-    "    }\n",
-    "\n",
-    "model = BPR()\n",
-    "model.fit(train) # train is pd.DataFrame with columns: userID, itemID, rating\n",
-    "model.predict(feed_dict) # feed_dict as in Dawid's model evaluation"
+    "np.load('Predictions/'+'bpr.npy')"
    ]
   },
   {
@@ -320,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
