Add K-Means recommendation

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "(0.5705196182396607, 0.31070297061217683)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "(0.19618239660657477, 0.10077311188637267)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "(0.18451749734888653, 0.0928493924719518)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,9 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(943, 101)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -194,15 +203,64 @@
        "(0.6214209968186638, 0.3461055973477752)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model_predictions = np.load('Predictions/bpr.npy', allow_pickle=True)\n",
+    "display(model_predictions.shape)\n",
     "evaluate_model(model_predictions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K = 2\n",
+      "Eval: HR = 0.1516, NDCG = 0.0663\n",
+      "--------------\n",
+      "K = 5\n",
+      "Eval: HR = 0.1357, NDCG = 0.0552\n",
+      "--------------\n",
+      "K = 10\n",
+      "Eval: HR = 0.1135, NDCG = 0.0415\n",
+      "--------------\n",
+      "K = 20\n",
+      "Eval: HR = 0.1463, NDCG = 0.0587\n",
+      "--------------\n",
+      "K = 30\n",
+      "Eval: HR = 0.1379, NDCG = 0.0538\n",
+      "--------------\n",
+      "K = 50\n",
+      "Eval: HR = 0.1315, NDCG = 0.0502\n",
+      "--------------\n",
+      "K = 100\n",
+      "Eval: HR = 0.1273, NDCG = 0.0458\n",
+      "--------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k_size in [2, 5, 10, 20, 30, 50, 100]:\n",
+    "    print('K =', k_size)\n",
+    "    model_predictions = np.load('Predictions/kmeans_' + str(k_size) + '.npy', allow_pickle=True)\n",
+    "    evaluate_model(model_predictions)\n",
+    "    print('--------------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -214,9 +272,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "semester_3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "semester_3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -228,9 +286,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
